day2/api/api-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: medhy-dohou
spec:
  selector:
    app: api
  ports:
  - name: api-port
    protocol: TCP
    port: 80
    targetPort: api-port
---
