day2/api/api-ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: medhy-dohou
spec:
  ingressClassName: nginx
  rules:
  - host: api.medhy-dohou.cpe.takima.school
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
  tls:
  - hosts: 
    - api.medhy-dohou.cpe.takima.school
    secretName: app-wildcard
---
